# Life

./: .gitignore  ArrayMatrix.hs  Colors.hs  LICENSE  Life.cabal  Life.hi  Life.hs  LifeBool.hs  LifeMatrix.hs  LifeRendering.hs  LifeStructures.hs  ListUtils.hs  Matrix.hs  README.md  RandomList.hs  Setup.lhs  minimal_life.hs  test.txt
src/: ArrayMatrix.hs  ArrayMatrix2.hs  ArrayMatrixProperties.hs  Colors.hs  Life.hs  LifeMatrix.hs  LifeRendering.hs  ListUtils.hs  Main.hs  Matrix.hs  MatrixProfile.hs  Profile.hs  RandomList.hs  RandomListProperties.hs  Toggle.hs
