Name: Life
Version: 0.0.0

Cabal-Version: >= 1.6
Build-type: Simple

License: Beer-Ware
License-file: LICENSE

Copyright: (c) Lyndon Maydwell <maydwell@gmail.com>

Author: Lyndon Maydwell <maydwell@gmail.com>
Maintainer: Lyndon Maydwell <maydwell@gmail.com>

Homepage: http://github.com/sordina/Life

Category:	Game

Synopsis:	Conway's Game of Life written in Haskell-OpenGL

Description:
  Conway's Game of Life is a cellular automatom simulation.
  This implementation uses OpenGL as a visualization layer.

library
  Build-depends:
    safe, glut
  Exposed-Modules:
    Life
  GHC-options:
    -fglasgow-exts

executable life
    build-depends:
        safe, glut

    ghc-options: -fglasgow-exts

    main-is: Life.hs
