Name: Life
Version: 0.0.0
Category: Game
Description:
  Conway's Game of Life is a cellular automatom simulation.
  This implementation uses OpenGL as a visualization layer.

Author: Lyndon Maydwell <maydwell@gmail.com>
Maintainer: Lyndon Maydwell <maydwell@gmail.com>
Homepage: http://github.com/sordina/Life

License: OtherLicense
License-file: LICENSE

Build-type: Simple
Cabal-Version: >= 1.6

Executable life

    Main-is: Life.hs

    hs-source-dirs: src

    Build-depends:
      base >= 3.0,
      StateVar >= 1.0,
      haskell98,
      QuickCheck >= 2.0,
      OpenGL >= 2.0,
      time >= 1.0,
      safe,
      category-extras,
      array,
      GLUT

    ghc-options: -O2 -fglasgow-exts -funbox-strict-fields
